--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-964.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-370.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-187.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-999.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇭🇰 香港-384.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-450.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-313.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇹🇭 泰国-359.6KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.64MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
