--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-187.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-384.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇬🇧 英国-548.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-313.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇹🇭 泰国-359.6KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.64MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-651.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-322.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-941.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-187.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-548.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-359.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-651.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
