--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-450.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-978.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-225.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-369.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.11MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.51MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.10MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-819.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-322.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-889.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇭🇰 香港-1.18MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-362.1KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.08MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-978.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-819.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-889.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
